--- a/copilot/api/manifest.yml
+++ b/copilot/api/manifest.yml
@@ -2,17 +2,25 @@ name: api
 type: Backend Service  # Load Balancer なしの Backend Service タイプを使用
 
 image:
-  build: Dockerfile
+  build:
+    dockerfile: Dockerfile
   port: 80
-  platform: linux/arm64
+  #platform: linux/arm64
 
 cpu: 256
 memory: 512
-count:
-  range: 0-1
-  cooldown:
-    in: 30s
-    out: 30s
+count: 1
+#count:
+#  range: 0-1
+#  cooldown:
+#    in: 30s
+#    out: 30s
+
+capacity:
+  type: FARGATE_SPOT
+
+logging:
+  retention: 3
 
 network:
   vpc:
