--- a/copilot/environments/addons/scheduler.yml
+++ b/copilot/environments/addons/scheduler.yml
@@ -35,12 +35,13 @@ Resources:
       GroupName: default
       Name: !Sub ${App}-${Env}-stop-service
       Description: "Stop ECS service during off-hours"
-      ScheduleExpression: "cron(35 17 ? * * *)"
+      ScheduleExpression: "cron(40 17 ? * * *)"
       ScheduleExpressionTimezone: "Asia/Tokyo"
+      State: ENABLED
       Target:
         Arn: !Sub arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:service/${App}-${Env}/${App}-${Env}-api
         RoleArn: !GetAtt SchedulerRole.Arn
-        Input: '{"detail":{"desiredCount":0}}'
+        Input: !Sub '{"service":"${App}-${Env}-api", "desiredCount":0}'
 
   StartSchedule:
     Type: AWS::Scheduler::Schedule
@@ -52,7 +53,8 @@ Resources:
       Description: "Start ECS service during work hours"
       ScheduleExpression: "cron(0 12 ? * MON-FRI *)"
       ScheduleExpressionTimezone: "Asia/Tokyo"
+      State: ENABLED
       Target:
         Arn: !Sub arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:service/${App}-${Env}/${App}-${Env}-api
         RoleArn: !GetAtt SchedulerRole.Arn
-        Input: '{"detail":{"desiredCount":1}}'
+        Input: !Sub '{"service":"${App}-${Env}-api", "desiredCount":1}'
