--- a/copilot/environments/addons/scheduler.yml
+++ b/copilot/environments/addons/scheduler.yml
@@ -5,10 +5,25 @@ Parameters:
     Type: String
   DBClusterIdentifier:
     Type: String
+    Default: "economical-app-db"
   ECSClusterName:
     Type: String
+    Default: "economical-app-example-test-Cluster-vmNvReXCNSJW"
   ECSServiceName:
     Type: String
+    Default: "economical-app-example-test-api-Service-aqgW5mTWocdS"
+  StopServiceCron:
+    Type: String
+    Default: "cron(00 13 ? * * *)"
+  StopRDSCron:
+    Type: String
+    Default: "cron(05 13 ? * * *)"
+  StartServiceCron:
+    Type: String
+    Default: "cron(00 12 ? * MON-FRI *)"
+  StartRDSCron:
+    Type: String
+    Default: "cron(45 11 ? * MON-FRI *)"
 
 Conditions:
   IsNotProduction: !Not
@@ -53,7 +68,7 @@ Resources:
       GroupName: default
       Name: !Sub ${App}-${Env}-stop-service
       Description: "Stop ECS service during off-hours"
-      ScheduleExpression: "cron(00 13 ? * * *)"
+      ScheduleExpression: !Ref StopServiceCron
       ScheduleExpressionTimezone: "Asia/Tokyo"
       State: "ENABLED"
       Target:
@@ -75,7 +90,7 @@ Resources:
       GroupName: default
       Name: !Sub ${App}-${Env}-stop-rds
       Description: "Stop RDS cluster during off-hours"
-      ScheduleExpression: "cron(05 13 ? * * *)"
+      ScheduleExpression:  !Ref StopRDSCron
       ScheduleExpressionTimezone: "Asia/Tokyo"
       State: "ENABLED"
       Target:
@@ -95,7 +110,7 @@ Resources:
       GroupName: default
       Name: !Sub ${App}-${Env}-start-service
       Description: "Start ECS service during work hours"
-      ScheduleExpression: "cron(00 12 ? * MON-FRI *)"
+      ScheduleExpression: !Ref StartServiceCron
       ScheduleExpressionTimezone: "Asia/Tokyo"
       State: "DISABLED"
       Target:
@@ -117,7 +132,7 @@ Resources:
       GroupName: default
       Name: !Sub ${App}-${Env}-start-rds
       Description: "Start RDS cluster during work hours"
-      ScheduleExpression: "cron(45 11 ? * MON-FRI *)"
+      ScheduleExpression: !Ref StartRDSCron
       ScheduleExpressionTimezone: "Asia/Tokyo"
       State: "DISABLED"
       Target:
